--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "daemon": "^1.1.0",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
-    "nodeman": "^1.1.2"
+    "nodeman": "^1.1.2",
+    "nodemon": "^3.1.4",
+    "passport": "^0.7.0"
   },
   "description": ""
 }
